@@ -106,7 +106,8 @@ public class DatePicker extends JPanel implements java.awt.event.FocusListener {
 	 */
 	public DatePicker() {
 
-		this(new GregorianCalendar());
+		this(
+				new GregorianCalendar());
 		this.calLabel.setEditable(false);
 
 	}
@@ -370,8 +371,7 @@ public class DatePicker extends JPanel implements java.awt.event.FocusListener {
 					// overwrite any left over values from old month
 					this.display.setValueAt("", row, col);
 				else {
-					this.display.setValueAt(new Integer(
-						day), row, col);
+					this.display.setValueAt(Integer.valueOf(day), row, col);
 					day++;
 				}
 
@@ -446,9 +446,13 @@ public class DatePicker extends JPanel implements java.awt.event.FocusListener {
 	 */
 	private class CalendarModel extends DefaultTableModel {
 
+		private static final long serialVersionUID = 4787997242088354704L;
+
 		public CalendarModel(final int row, final int col) {
 
-			super(row, col);
+			super(
+					row,
+					col);
 		}
 
 		/**
@@ -456,7 +460,7 @@ public class DatePicker extends JPanel implements java.awt.event.FocusListener {
 		 * automatically right-aligned by a default renderer that's supplied as part of JTable.
 		 */
 		@Override
-		public Class getColumnClass(final int column) {
+		public Class<?> getColumnClass(final int column) {
 
 			return Integer.class;
 		}
