@@ -7,6 +7,7 @@ import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
 import java.util.Enumeration;
 import java.util.Hashtable;
+
 import javax.swing.JFrame;
 import javax.swing.JPanel;
 import javax.swing.JProgressBar;
@@ -23,225 +24,241 @@ import javax.swing.table.TableModel;
 /**
  * @version 1.0 03/03/99
  */
-public class IndicatorTableExample
-        extends JPanel {
+public class IndicatorTableExample extends JPanel {
 
-    private static final int MAX = 100;
+	private static final long serialVersionUID = -1968925955553038674L;
 
-    private static final int MIN = 0;
+	private static final int MAX = 100;
 
-    public IndicatorTableExample() {
+	private static final int MIN = 0;
 
-        this.setLayout(new BorderLayout());
+	public IndicatorTableExample() {
 
-        DefaultTableModel dm = new DefaultTableModel() {
-            @Override
-            public Class getColumnClass(int col) {
+		setLayout(new BorderLayout());
 
-                switch (col) {
-                    case 0:
-                        return String.class;
-                    case 1:
-                        return Integer.class;
-                    case 2:
-                        return Integer.class;
-                    default:
-                        return Object.class;
-                }
-            }
+		final DefaultTableModel dm = new DefaultTableModel() {
 
-            @Override
-            public boolean isCellEditable(int row, int col) {
+			private static final long serialVersionUID = -7055226212230000655L;
 
-                switch (col) {
-                    case 2:
-                        return false;
-                    default:
-                        return true;
-                }
-            }
+			@Override
+			public Class<?> getColumnClass(final int col) {
 
-            @Override
-            public void setValueAt(Object obj, int row, int col) {
+				switch (col) {
+				case 0:
+					return String.class;
+				case 1:
+					return Integer.class;
+				case 2:
+					return Integer.class;
+				default:
+					return Object.class;
+				}
+			}
 
-                if (col != 1) {
-                    super.setValueAt(obj, row, col);
-                    return;
-                }
-                try {
-                    Integer integer = new Integer(obj.toString());
-                    super.setValueAt(IndicatorTableExample.this.checkMinMax(integer), row, col);
-                } catch (NumberFormatException ex) {
-                    ex.printStackTrace();
-                }
-            }
+			@Override
+			public boolean isCellEditable(final int row, final int col) {
 
-        };
-        dm.setDataVector(
-                new Object[][]{
-                    {"not human", new Integer(100), new Integer(100)},
-                    {"hard worker", new Integer(76), new Integer(76)},
-                    {"ordinary guy", new Integer(51), new Integer(51)},
-                    {"lazy fellow", new Integer(12), new Integer(12)}},
-                new Object[]{"Name", "Result", "Indicator"});
+				switch (col) {
+				case 2:
+					return false;
+				default:
+					return true;
+				}
+			}
 
-        JTable table = new JTable(dm);
-        table.setRowHeight(21);
+			@Override
+			public void setValueAt(final Object obj, final int row, final int col) {
 
-        IndicatorCellRenderer renderer =
-                new IndicatorCellRenderer(IndicatorTableExample.MIN, IndicatorTableExample.MAX);
-        renderer.setStringPainted(true);
-        renderer.setBackground(table.getBackground());
+				if (col != 1) {
+					super.setValueAt(obj, row, col);
+					return;
+				}
+				try {
+					final Integer integer = Integer.valueOf(obj.toString());
+					super.setValueAt(IndicatorTableExample.this.checkMinMax(integer), row, col);
+				}
+				catch (final NumberFormatException ex) {
+					ex.printStackTrace();
+				}
+			}
 
-        // set limit value and fill color
-        Hashtable limitColors = new Hashtable();
-        limitColors.put(new Integer(0), Color.green);
-        limitColors.put(new Integer(60), Color.yellow);
-        limitColors.put(new Integer(80), Color.CYAN);
-        renderer.setLimits(limitColors);
-        table.getColumnModel()
-                .getColumn(2)
-                .setCellRenderer(renderer);
+		};
+		dm.setDataVector(
+				new Object[][] {
+						{ "not human", Integer.valueOf(100), Integer.valueOf(100) },
+						{ "hard worker", Integer.valueOf(76), Integer.valueOf(76) },
+						{ "ordinary guy", Integer.valueOf(51), Integer.valueOf(51) },
+						{ "lazy fellow", Integer.valueOf(12), Integer.valueOf(12) } },
+				new Object[] { "Name", "Result", "Indicator" });
 
-        table.getModel()
-                .addTableModelListener(e -> {
+		final JTable table = new JTable(
+			dm);
+		table.setRowHeight(21);
 
-                    if (e.getType() == TableModelEvent.UPDATE) {
-                        int col = e.getColumn();
-                        if (col == 1) {
-                            int row = e.getFirstRow();
-                            TableModel model = (TableModel)e.getSource();
-                            Integer value = (Integer)model.getValueAt(row, col);
-                            model.setValueAt(IndicatorTableExample.this.checkMinMax(value), row, ++col);
-                        }
-                    }
-                });
+		final IndicatorCellRenderer renderer = new IndicatorCellRenderer(
+			IndicatorTableExample.MIN, IndicatorTableExample.MAX);
+		renderer.setStringPainted(true);
+		renderer.setBackground(table.getBackground());
 
-        JScrollPane pane = new JScrollPane(table);
-        this.add(pane, BorderLayout.CENTER);
-    }
+		// set limit value and fill color
+		final Hashtable<Integer, Color> limitColors = new Hashtable<>();
+		limitColors.put(Integer.valueOf(0), Color.green);
+		limitColors.put(Integer.valueOf(60), Color.yellow);
+		limitColors.put(Integer.valueOf(80), Color.CYAN);
+		renderer.setLimits(limitColors);
+		table.getColumnModel()
+				.getColumn(2)
+				.setCellRenderer(renderer);
 
-    public static void main(String[] args) {
+		table.getModel()
+				.addTableModelListener(e -> {
 
-        JFrame f = new JFrame("IndicatorTable Example");
-        try {
-            UIManager.setLookAndFeel(UIManager.getSystemLookAndFeelClassName());
-        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException
-                | UnsupportedLookAndFeelException e1) {
-            // TODO Auto-generated catch block
-            e1.printStackTrace();
-        }
+					if (e.getType() == TableModelEvent.UPDATE) {
+						int col = e.getColumn();
+						if (col == 1) {
+							final int row = e.getFirstRow();
+							final TableModel model = (TableModel) e.getSource();
+							final Integer value = (Integer) model.getValueAt(row, col);
+							model.setValueAt(IndicatorTableExample.this.checkMinMax(value), row, ++col);
+						}
+					}
+				});
 
-        f.getContentPane()
-                .add(new IndicatorTableExample(), BorderLayout.CENTER);
-        f.setSize(400, 120);
-        f.setVisible(true);
-        f.addWindowListener(new WindowAdapter() {
-            @Override
-            public void windowClosing(WindowEvent e) {
+		final JScrollPane pane = new JScrollPane(
+			table);
+		this.add(pane, BorderLayout.CENTER);
+	}
 
-                System.exit(0);
-            }
+	public static void main(final String[] args) {
 
-        });
-    }
+		final JFrame f = new JFrame(
+			"IndicatorTable Example");
+		try {
+			UIManager.setLookAndFeel(UIManager.getSystemLookAndFeelClassName());
+		}
+		catch (ClassNotFoundException | InstantiationException | IllegalAccessException
+				| UnsupportedLookAndFeelException e1) {
+			// TODO Auto-generated catch block
+			e1.printStackTrace();
+		}
 
-    private Integer checkMinMax(Integer value) {
+		f.getContentPane()
+				.add(new IndicatorTableExample(), BorderLayout.CENTER);
+		f.setSize(400, 120);
+		f.setVisible(true);
+		f.addWindowListener(new WindowAdapter() {
+			@Override
+			public void windowClosing(final WindowEvent e) {
 
-        int intValue = value.intValue();
-        if (intValue < IndicatorTableExample.MIN)
-            intValue = IndicatorTableExample.MIN;
-        else if (IndicatorTableExample.MAX < intValue)
-            intValue = IndicatorTableExample.MAX;
-        return new Integer(intValue);
-    }
+				System.exit(0);
+			}
+
+		});
+	}
+
+	private Integer checkMinMax(final Integer value) {
+
+		int intValue = value.intValue();
+		if (intValue < IndicatorTableExample.MIN)
+			intValue = IndicatorTableExample.MIN;
+		else if (IndicatorTableExample.MAX < intValue)
+			intValue = IndicatorTableExample.MAX;
+		return Integer.valueOf(intValue);
+	}
 
 }
 
 /**
  * @version 1.0 03/03/99
  */
-class IndicatorCellRenderer
-        extends JProgressBar
-        implements TableCellRenderer {
+class IndicatorCellRenderer extends JProgressBar implements TableCellRenderer {
 
-    private Hashtable limitColors;
+	private static final long serialVersionUID = 2779629635308191814L;
 
-    private int[] limitValues;
+	private Hashtable<Integer, Color> limitColors;
 
-    public IndicatorCellRenderer() {
+	private int[] limitValues;
 
-        super(SwingConstants.HORIZONTAL);
-        this.setBorderPainted(false);
-    }
+	public IndicatorCellRenderer() {
 
-    public IndicatorCellRenderer(int min, int max) {
+		super(
+				SwingConstants.HORIZONTAL);
+		setBorderPainted(false);
+	}
 
-        super(SwingConstants.HORIZONTAL, min, max);
-        this.setBorderPainted(false);
-    }
+	public IndicatorCellRenderer(final int min, final int max) {
 
-    @Override
-    public Component getTableCellRendererComponent(JTable table, Object value, boolean isSelected, boolean hasFocus,
-            int row, int column) {
+		super(
+				SwingConstants.HORIZONTAL,
+				min,
+				max);
+		setBorderPainted(false);
+	}
 
-        int n = 0;
-        if (!(value instanceof Number)) {
-            String str;
-            if (value instanceof String)
-                str = (String)value;
-            else
-                str = value.toString();
-            try {
-                n = Integer.valueOf(str)
-                        .intValue();
-            } catch (NumberFormatException ex) {
-            }
-        } else
-            n = ((Number)value).intValue();
-        Color color = this.getColor(n);
-        if (color != null)
-            this.setForeground(color);
-        this.setValue(n);
-        return this;
-    }
+	@Override
+	public Component getTableCellRendererComponent(final JTable table, final Object value, final boolean isSelected,
+			final boolean hasFocus, final int row, final int column) {
 
-    public void setLimits(Hashtable limitColors) {
+		int n = 0;
+		if (!(value instanceof Number)) {
+			String str;
+			if (value instanceof String)
+				str = (String) value;
+			else
+				str = value.toString();
+			try {
+				n = Integer.valueOf(str)
+						.intValue();
+			}
+			catch (final NumberFormatException ex) {
+			}
+		}
+		else
+			n = ((Number) value).intValue();
+		final Color color = getColor(n);
+		if (color != null)
+			setForeground(color);
+		setValue(n);
+		return this;
+	}
 
-        this.limitColors = limitColors;
-        int i = 0;
-        int n = limitColors.size();
-        this.limitValues = new int[n];
-        Enumeration e = limitColors.keys();
-        while (e.hasMoreElements())
-            this.limitValues[i++] = ((Integer)e.nextElement()).intValue();
-        this.sort(this.limitValues);
-    }
+	public void setLimits(final Hashtable limitColors) {
 
-    private Color getColor(int value) {
+		this.limitColors = limitColors;
+		int i = 0;
+		final int n = limitColors.size();
+		this.limitValues = new int[n];
+		final Enumeration<Integer> e = limitColors.keys();
+		while (e.hasMoreElements())
+			this.limitValues[i++] = e.nextElement()
+					.intValue();
+		sort(this.limitValues);
+	}
 
-        Color color = null;
-        if (this.limitValues != null) {
-            int i;
-            for (i = 0; i < this.limitValues.length; i++)
-                if (this.limitValues[i] < value)
-                    color = (Color)this.limitColors.get(new Integer(this.limitValues[i]));
-        }
-        return color;
-    }
+	private Color getColor(final int value) {
 
-    private void sort(int[] a) {
+		Color color = null;
+		if (this.limitValues != null) {
+			int i;
+			for (i = 0; i < this.limitValues.length; i++)
+				if (this.limitValues[i] < value)
+					color = this.limitColors.get(Integer.valueOf(this.limitValues[i]));
+		}
+		return color;
+	}
 
-        int n = a.length;
-        for (int i = 0; i < (n - 1); i++) {
-            int k = i;
-            for (int j = i + 1; j < n; j++)
-                if (a[j] < a[k])
-                    k = j;
-            int tmp = a[i];
-            a[i] = a[k];
-            a[k] = tmp;
-        }
-    }
+	private void sort(final int[] a) {
+
+		final int n = a.length;
+		for (int i = 0; i < (n - 1); i++) {
+			int k = i;
+			for (int j = i + 1; j < n; j++)
+				if (a[j] < a[k])
+					k = j;
+			final int tmp = a[i];
+			a[i] = a[k];
+			a[k] = tmp;
+		}
+	}
 
 }
